Updates from Overleaf

--- a/d02-bfv.tex
+++ b/d02-bfv.tex
@@ -1105,7 +1105,7 @@ $\vec{v}^{\langle h \rangle} = \bm{(} \text{ } M(\omega^{J(h)}), \text{ } M(\ome
 
 $ $
 
-Notice that the above computation of $\vec{v}^{\langle h \rangle}$ is equivalent to vertically rotating the upper $\frac{n}{2}$ rows of $\hathat W^*$ by $h$ positions upward (in a wrapping manner among them), rotating the lower $\frac{n}{2}$ rows of $\hathat W^*$ by $h$ positions upward (in a wrapping manner among them), and multiplying the resulting matrix with $\vec{m}$. However, it is not desirable to directly modify the decoding matrix $\hathat W^*$ like this in practice, because then the decoding matrix loses its consistency. Therefore, instead of directly modifying $\hathat W^*$, we will modify $\vec{m}$ to $\vec{m}_{'}$ (i.e., modify $M(X)$ to $M'(X)$) such that the relation $\vec{v}^{\langle h \rangle} = \hathat W^* \cdot \vec{m}_{'}$ holds. Let's extract the upper-half rows of $\hathat W^*$ and denote this $\dfrac{n}{2} \times n$ matrix as $\hathat H_1{^T}$. Then, $\hathat H_1^T$ is equivalent to a Vandermonde matrix (Definition~\ref*{subsec:vandermonde} in \autoref{subsec:vandermonde}) in the form of $V(\omega^{J(0)}, \omega^{J(1)}, \cdots, \omega^{J(\frac{n}{2}-1)})$. Similarly, let's extract the lower-half rows of $\hathat W^*$ and denote this $\dfrac{n}{2} \times n$ matrix as $\hathat H_2{^T}$. Then, $\hathat H_2^*$ is equivalent to a Vandermonde matrix (Definition~\ref*{subsec:vandermonde} in \autoref{subsec:vandermonde}) in the form of $V(\omega^{J_*(0)}, \omega^{J_*(1)}, \cdots, \omega^{J_*(\frac{n}{2}-1)})$. 
+Notice that the above computation of $\vec{v}^{\langle h \rangle}$ is equivalent to vertically rotating the upper $\frac{n}{2}$ rows of $\hathat W^*$ by $h$ positions upward (in a wrapping manner among them), rotating the lower $\frac{n}{2}$ rows of $\hathat{W}^{*}$ by $h$ positions upward (in a wrapping manner among them), and multiplying the resulting matrix with $\vec{m}$. However, it is not desirable to directly modify the decoding matrix $\hathat W^*$ like this in practice, because then the decoding matrix loses its consistency. Therefore, instead of directly modifying $\hathat W^*$, we will modify $\vec{m}$ to $\vec{m}_{'}$ (i.e., modify $M(X)$ to $M'(X)$) such that the relation $\vec{v}^{\langle h \rangle} = \hathat W^* \cdot \vec{m}_{'}$ holds. Let's extract the upper-half rows of $\hathat W^*$ and denote this $\dfrac{n}{2} \times n$ matrix as $\hathat H_1{^T}$. Then, $\hathat H_1^T$ is equivalent to a Vandermonde matrix (Definition~\ref*{subsec:vandermonde} in \autoref{subsec:vandermonde}) in the form of $V(\omega^{J(0)}, \omega^{J(1)}, \cdots, \omega^{J(\frac{n}{2}-1)})$. Similarly, let's extract the lower-half rows of $\hathat W^*$ and denote this $\dfrac{n}{2} \times n$ matrix as $\hathat H_2{^T}$. Then, $\hathat H_2^*$ is equivalent to a Vandermonde matrix (Definition~\ref*{subsec:vandermonde} in \autoref{subsec:vandermonde}) in the form of $V(\omega^{J_*(0)}, \omega^{J_*(1)}, \cdots, \omega^{J_*(\frac{n}{2}-1)})$. 
 
 Now, let's vertically rotate the rows of $\hathat H_1^*$ by $h$ positions upward and denote it as $\hathat H_1{^{*\langle h \rangle}}$; and vertically rotate the rows of $\hathat H_2^*$ by $h$ positions upward and denote it as $\hathat H_2{^{T\langle h \rangle}}$. And let's denote the $\dfrac{n}{2}$-dimensional vector comprising the first-half elements of $\vec{v}^{\langle h \rangle}$ as $\vec{v}_1^{\langle h \rangle}$, and the $\dfrac{n}{2}$-dimensional vector comprising the second-half elements of $\vec{v}^{\langle h \rangle}$ as $\vec{v}_2^{\langle h \rangle}$. 
 Then, computing (i.e., decoding) $\vec{v}_1^{\langle h \rangle} = \hathat H_1^{*\langle h \rangle}\cdot \vec{m}$ is equivalent to modifying $M(X)$ to $M'(X) = M(X^{J(h)})$ (whose coefficient vector is $\vec{m}^{\langle h \rangle}$) and then computing (i.e., decoding) $\vec{v}_1^{\langle h \rangle} = \hathat H_1^{*}\cdot \vec{m}^{\langle h \rangle}$. This is because:
